force-app/main/default/objects/ViewSonic_Time_Range__c/ViewSonic_Time_Range__c.object-meta.xml
<CustomObject>
    <description>Date Formulas for CY,PY, Q1,Q2 etc...</description>
    <label>ViewSonic Time Range</label>
    <nameField>
        <label>ViewSonic Time Range Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ViewSonic Time Ranges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>