force-app/main/default/objects/ViewSonic_Time_Range__c/fields/CQ__c.field-meta.xml
<CustomField>
    <fullName>CQ__c</fullName>
    <formula>CASE(month(today()), 1, &quot;Q1&quot;, 2, &quot;Q1&quot;, 3, &quot;Q1&quot;, 
                     4, &quot;Q2&quot;, 5, &quot;Q2&quot;, 6, &quot;Q2&quot;,
                     7, &quot;Q3&quot;, 8, &quot;Q3&quot;, 9, &quot;Q3&quot;,   
&quot;Q4&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CQ</label>
    <type>Text</type>
</CustomField>