force-app/main/default/objects/ViewSonic_Time_Range__c/fields/CY__c.field-meta.xml
<CustomField>
    <fullName>CY__c</fullName>
    <formula>text(year(today())-0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY</label>
    <type>Text</type>
</CustomField>