force-app/main/default/objects/ViewSonic_Time_Range__c/fields/PY__c.field-meta.xml
<CustomField>
    <fullName>PY__c</fullName>
    <formula>text(year(today())-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PY</label>
    <type>Text</type>
</CustomField>