force-app/main/default/objects/ViewSonic_Time_Range__c/fields/X2Y__c.field-meta.xml
<CustomField>
    <fullName>X2Y__c</fullName>
    <formula>text(year(today())-2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2Y</label>
    <type>Text</type>
</CustomField>