force-app/main/default/objects/ViewSonic_Time_Range__c/fields/X3Y__c.field-meta.xml
<CustomField>
    <fullName>X3Y__c</fullName>
    <formula>text(year(today())-3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3Y</label>
    <type>Text</type>
</CustomField>