force-app/main/default/objects/ViewSonic_Time_Range__c/fields/X4Y__c.field-meta.xml
<CustomField>
    <fullName>X4Y__c</fullName>
    <formula>text(year(today())-4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>4Y</label>
    <type>Text</type>
</CustomField>