force-app/main/default/objects/ViewSonic_Time_Range__c/fields/X5Q__c.field-meta.xml
<CustomField>
    <fullName>X5Q__c</fullName>
    <formula>CASE(month(today()), 1, &quot;Q4 &quot;&amp;text(year(today()-365)), 2, &quot;Q4 &quot;&amp;text(year(today()-365)), 3, &quot;Q4 &quot;&amp;text(year(today()-365)), 
                     4, &quot;Q1 &quot;&amp;text(year(today()-365)), 5, &quot;Q1 &quot;&amp;text(year(today()-365)), 6, &quot;Q1 &quot;&amp;text(year(today()-365)),
                     7, &quot;Q2 &quot;&amp;text(year(today()-365)), 8, &quot;Q2 &quot;&amp;text(year(today()-365)), 9, &quot;Q2 &quot;&amp;text(year(today()-365)),   
&quot;Q3 &quot;&amp;text(year(today()-365)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5Q</label>
    <type>Text</type>
</CustomField>